tabella non centrata hr non rosso

--- a/style.css
+++ b/style.css
@@ -3,6 +3,18 @@
     text-align: center;
 }
 
-span{
+.rosso{
     color: red;
+}
+
+hr{
+    color: red;
+}
+
+.em{
+    width: 100px;
+}
+
+.nomi{
+    background-color: beige;
 }
